src/style.css
body {
    margin: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1rem;
}

header {
    width: 100%;
    margin-bottom: 40px;
}

header img {
    width: 100%;
}

.container {
    margin: 0 24px;
    position: relative;
}

.product-card {
    width: 100%;
    display: flex;
    justify-content: space-between;
    font-family: "Smythe", serif;
    font-weight: 400;
    font-style: normal;
    padding-bottom: 20px;
    margin-bottom: 20px;
    border-bottom: solid 1px #D2D2D2;
}

.product-info {
    display: flex;
    align-items: center;
    gap: 16px;
}

.product-img img {
    width: 72px;
    height: auto;
    margin: 0;
}

.product-description {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

h2 {
    font-size: 1.75rem;
    margin: 0;
}

.description {
    color: #8B8B8B;
    margin: 0;
}

.price {
    font-size: 1.25rem;
    margin: 0;
}

.add-product {
    background-color: white;
    color: #3C3C3C;
    border-radius: 200px;
    border-style: solid;
    border-color: #DEDEDE;
    border-width: 1.5px;
    font-size: 1.5rem;
    font-weight: 200;
    width: 40px;
    height: 40px;
}

.order-container {
    font-family: "Smythe", serif;
    font-weight: 400;
    font-style: normal;
    width: 100%;
    display: none;
    flex-direction: column;
    align-items: center;
}

#your-order {
    margin: 40px 0;
}

.line {
    background-color: #3C3C3C;
    width: 100%;
    height: 1px;
}

.selected-items-container {
    width: 100%;
}

.selected-items, .total-price {
    margin: 16px 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.complete-order {
    position: absolute;
    bottom: -100px;
    background-color: #16DB99;
    width: 100%;
    padding: 20px 0;
    color: white;
    font-weight: 700;
    text-decoration: none;
    border-style: none;
}

